fix overflow hidden

--- a/css/style.css
+++ b/css/style.css
@@ -6064,7 +6064,7 @@ button.testimonial-arrow-btn {
   margin-top: 78px;
   margin-bottom: 40px; }
 .blog-details-wrapper .post-comments {
-  margin-top: 0; }
+  margin-top: 78px; }
 .blog-details-wrapper .wp-block-group.has-background .wp-block-button .wp-block-button__link {
   color: #ffffff !important; }
 .blog-details-wrapper .single-post-item {
