--- a/sass/modules/post-card/_post-card.scss
+++ b/sass/modules/post-card/_post-card.scss
@@ -34,7 +34,7 @@
     margin-bottom: 40px;
   }
   .post-comments {
-    margin-top: 0;
+    margin-top: 78px;
   }
   .wp-block-group.has-background {
     .wp-block-button {
